- unified line endings - added stubs for facade layer and data layer

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -65,6 +65,7 @@
     <Compile Include="InstanceTests.fs" />
     <Compile Include="MetametamodelTests.fs" />
     <None Include="paket.references" />
+    <Compile Include="DataModelTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
