First pass on Data Layer implementation

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="MetametamodelTests.fs" />
     <None Include="paket.references" />
     <Compile Include="DataModelTests.fs" />
+    <Compile Include="DataRepoTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
