Some more tests and comments

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -67,6 +67,7 @@
     <None Include="paket.references" />
     <Compile Include="DataModelTests.fs" />
     <Compile Include="DataRepoTest.fs" />
+    <Compile Include="DataElementTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
