Full models stack for checking of concepts

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -70,6 +70,8 @@
     <Compile Include="DataElementTests.fs" />
     <Compile Include="CoreMetametamodelBuilderTests.fs" />
     <Compile Include="FacadeRepoTests.fs" />
+    <Compile Include="FacadeModelTests.fs" />
+    <Compile Include="FacadeAttributeTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
