First pass on working with nodes and edges

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="FacadeRepoTests.fs" />
     <Compile Include="FacadeModelTests.fs" />
     <Compile Include="FacadeAttributeTests.fs" />
+    <Compile Include="FacadeNodeTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
