--- a/src/WPF_Editor/WPF_Editor.csproj
+++ b/src/WPF_Editor/WPF_Editor.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Console\ConsoleWindow.cs" />
     <Compile Include="ViewModels\EditorViewModel.cs" />
     <Compile Include="Views\Editor.xaml.cs">
       <DependentUpon>Editor.xaml</DependentUpon>
@@ -77,7 +78,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Console.cs" />
+    <Compile Include="Models\Console\Console.cs" />
     <Compile Include="Models\FakeRepo\FakeRepo.cs" />
     <Compile Include="Models\FakeRepo\Model.cs" />
     <Compile Include="Models\Palette.cs" />
