--- a/src/WPF_Editor/WPF_Editor.csproj
+++ b/src/WPF_Editor/WPF_Editor.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\Console\ConsoleWindow.cs" />
+    <Compile Include="ViewModels\Convertors\BoolToConsoleVisibiltyConvertor.cs" />
     <Compile Include="ViewModels\EditorViewModel.cs" />
     <Compile Include="Views\Editor.xaml.cs">
       <DependentUpon>Editor.xaml</DependentUpon>
@@ -78,7 +79,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Console\Console.cs" />
+    <Compile Include="Models\Console\AppConsole.cs" />
     <Compile Include="Models\FakeRepo\FakeRepo.cs" />
     <Compile Include="Models\FakeRepo\Model.cs" />
     <Compile Include="Models\Palette.cs" />
