--- a/src/WPF_Editor/WPF_Editor.csproj
+++ b/src/WPF_Editor/WPF_Editor.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Interfaces\IAppConsole.cs" />
+    <Compile Include="Models\Interfaces\IAppConsoleMediator.cs" />
     <Compile Include="Models\Interfaces\IConsole.cs" />
     <Compile Include="Models\Interfaces\IPalette.cs" />
     <Compile Include="Models\Interfaces\IPaletteMediator.cs" />
@@ -63,7 +65,6 @@
     <Compile Include="Models\Interfaces\ISceneMediator.cs" />
     <Compile Include="Models\Interfaces\IToolbar.cs" />
     <Compile Include="Models\Mediator.cs" />
-    <Compile Include="Models\Point.cs" />
     <Compile Include="Models\Console\ConsoleWindow.cs" />
     <Compile Include="ViewModels\Convertors\BoolToConsoleVisibiltyConvertor.cs" />
     <Compile Include="ViewModels\EditorViewModel.cs" />
