Generalizations are now also counted as edges for tools

--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -66,7 +66,9 @@
     <Compile Include="DataRepoTest.fs" />
     <Compile Include="DataElementTests.fs" />
     <Compile Include="CoreMetametamodelBuilderTests.fs" />
+    <Compile Include="CoreSemanticLayerTests.fs" />
     <Compile Include="InfrastructureSemanticLayerTests.fs" />
+    <Compile Include="RobotsTestModelsTests.fs" />
     <Compile Include="FacadeRepoTests.fs" />
     <Compile Include="FacadeModelTests.fs" />
     <Compile Include="FacadeAttributeTests.fs" />
